--- a/wubi.kv
+++ b/wubi.kv
@@ -46,7 +46,7 @@
                 valign: 'middle'
                 halign: 'center'
                 markup: True
-                on_press: root.query(MyTextInput.text.strip())
+                #on_press: root.query(MyTextInput.text.strip())
                 on_text: 
                 -font_name: root.font_name()
         BoxLayout:
@@ -54,4 +54,4 @@
             spacing: 10
             size_hint: 1, None
             pos_hint: {'top': 1}
-            height: 10
+            height: 1200
